Fixed prev button bug

--- a/mdb/css/style.css
+++ b/mdb/css/style.css
@@ -32,6 +32,10 @@
   overflow: hidden;
   height: 250px;
 }
+
+.dropdown-item:hover {
+  color: black !important;
+}
 .slider-frame .btnn {
   width: 40px;
   height: 100%;
