--- a/mdb/css/style.css
+++ b/mdb/css/style.css
@@ -25,6 +25,24 @@
     padding-left: 10px;
     padding-right: 10px;
   }
+
+.video-container {
+  padding: 2%;
+  padding-bottom: 0px;
+}
+
+.details-container {
+  background-color: white;
+  padding-top: 1%;
+  padding-bottom: 0px;
+  height: 600px;
+  overflow-y: scroll;
+}
+
+.sub-heading {
+    margin: 1%;
+}
+
 .slider-frame {
   background-color: transparent;
   position: relative;
@@ -74,6 +92,15 @@
 .tile__img {
   width: 100%;
   height: 100%
+}
+p.white-text {
+  margin-bottom: 0px !important;
+}
+.view {
+  margin: 2%;
+}
+.mask {
+  padding: 2%; 
 }
 .tile__details {
   position: absolute;
@@ -148,4 +175,25 @@
   left: auto;
   right: auto;
   /*padding-right: 160px;*/
+}
+
+
+.tab-item {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.nav-link {
+  color: black;
+}
+.nav-tabs {
+  border-bottom: none;
+}
+.nav-link.active {
+  color: black !important;
+  border: none !important;
+  background-color: transparent !important;
+  border-bottom: 2px solid red !important;
+}
+.tab-pane {
+  padding: 10px;
 }
