--- a/static/homepage.css
+++ b/static/homepage.css
@@ -1,7 +1,8 @@
 body {
 	height: 100%;
     font-size: 16px;
-    background: url("/static/bg.jpeg");
+    /*background: url("/static/bg.jpeg");*/
+    background-color: #83BAAD;
 }
 
 .background-yellow {
