--- a/mdb/css/style.css
+++ b/mdb/css/style.css
@@ -2,7 +2,8 @@
   html {
     padding: 0;
     margin: 0;
-    background: url("bg.jpeg");;
+    /*background: url("bg.jpeg");;*/
+    background-color: black;
     color: black;
     min-height: 100vh;
     width: 100%;
