--- a/mdb/css/style.css
+++ b/mdb/css/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     /*background: url("bg.jpeg");;*/
     background-color: black;
-    color: black;
+    color: white;
     min-height: 100vh;
     width: 100%;
     font-family: 'Source Sans Pro', sans-serif;
